# wgpu-demo

./: Cargo.toml  Makefile  index.html
demo_html/: index.html
src/: lib.rs  main.rs  shader.wgsl
